align version with bootstrap version 4.3.1 and solve some issues related to that.

--- a/src/sass/bootstrap-foundation.scss
+++ b/src/sass/bootstrap-foundation.scss
@@ -581,6 +581,10 @@ ar: "ملف"
 
 // From @import "../node_modules/bootstrap/scss/pagination";
 
+.pagination {
+    padding-right: 0;
+}
+
 .page-link {
     margin-left: 0;
     margin-right: -$pagination-border-width;
