--- a/src/sass/bootstrap-ltr-extender.scss
+++ b/src/sass/bootstrap-ltr-extender.scss
@@ -21,8 +21,8 @@
 @each $breakpoint in map-keys($grid-breakpoints) {
     @include media-breakpoint-up($breakpoint) {
         $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
-        .float#{$infix}-start { @include float-left; }
-        .float#{$infix}-end  { @include float-right; }
+        .float#{$infix}-start { float: left !important; }
+        .float#{$infix}-end  { float: right !important; }
     }
 }
 
