--- a/src/sass/bootstrap-reverse.scss
+++ b/src/sass/bootstrap-reverse.scss
@@ -25,8 +25,8 @@
 @each $breakpoint in map-keys($grid-breakpoints) {
     @include media-breakpoint-up($breakpoint) {
         $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
-        .float#{$infix}-left  { @include float-right; }
-        .float#{$infix}-right { @include float-left; }
+        .float#{$infix}-left  { float: right !important; }
+        .float#{$infix}-right { float: left !important; }
     }
 }
 
